@@ -99,6 +99,12 @@ elements</a>.</p>
       disabled.</td>
     <td align="center" valign="top">No, default is &quot;false&quot;.</td>
   </tr>
+  <tr>
+    <td valign="top">includeantruntime</td>
+    <td valign="top">implicitly add the Ant classes required to run
+      the tests and JUnit to the classpath in forked mode.</td>
+    <td align="center" valign="top">No, default is &quot;true&quot;.</td>
+  </tr>
 </table>
 
 <h3><a name="nested">Nested Elements</a></h3>
